<resources>
    <string name="app_name">Rushing Turtles</string>

    <!-- TESTS -->
    <string name="test_string">Heh, something is wrong</string>
    <string name="toast_error">Something went wrong - error message from server</string>

    <!-- TOOLBAR -->
    <string name="info_toolbar">Information</string>
    <string name="settings_toolbar">Settings</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="name_text_view_settings">Your name</string>
    <string name="edit_button_text">Edit</string>
    <string name="save_button_text">Save</string>
    <string name="close_button_text">Close</string>
    <string name="toast_save_name_part_1">Your name</string>
    <string name="toast_has_been_saved">has been saved :)</string>
    <string name="ip_text_view_settings">Server IP address</string>
    <string name="toast_new_ip_address">New IP address</string>

    <!-- NAME ACTIVITY -->
    <string name="name_text_view">Enter your name</string>
    <string name="name_accept_button">Let\'s play</string>
    <string name="name_length_validation_text">Please enter your name (at least 3 characters)</string>
    <string name="name_enter_validation_text">Please enter your name without newline character</string>

    <!-- MAIN ACTIVITY -->
    <string name="main_button_start">Start game</string>
    <string name="main_button_join">Join game</string>
    <string name="main_button_after_join">Waiting for the game start</string>
    <string name="main_button_resume">Resume game</string>
    <string name="main_button_start_the_game">Let\'s play</string>
    <string name="main_button_wait_for_start_the_game">Waiting for server...</string>
    <string name="initial_info">Waiting for the response from server...</string>

    <string name="main_button_toast_almost_start_the_game">You have to wait for at least 2 players</string>
    <string name="main_button_toast_limit">There are too many players in the game - you can\'t join for now</string>
    <string name="main_button_toast_ongoing">The game has started - you can\'t join</string>

    <string name="waiting_room_text">Players waiting for the game start</string>

    <!-- GAME ACTIVITY -->
    <string name="turn_of_sb">Over to</string>
    <string name="your_turn">Your turn</string>
    <string name="play_card_on_deck">Play card</string>
    <string name="pick_color_card">Pick color</string>
    <string name="toast_pick_one_card">You have to pick exactly one card</string>
    <string name="toast_cant_move_turtle_back">You can\'t move the turtle backward from the Start</string>
    <string name="toast_exit_activity">To exit the game click BACK button twice</string>

    <!-- WINNER POPUP WINDOW -->
    <string name="popup_main_text">And the winner is...</string>
    <string name="popup_button_text">Play again</string>

    <!-- WEBSOCKET -->
    <string name="toast_no_connection">There is no connection with the server...</string>
    <string name="toast_websocket_connection">You are now connected to</string>

</resources>